--- a/css/theme.css
+++ b/css/theme.css
@@ -201,12 +201,15 @@ body.single-players .carousel img {
 }
 
 .post-thumbnail {
-    background-image: linear-gradient(180deg,#339933,#008000);
     text-align: center;
 }
 
-#jat-carousel {
-    background-image: linear-gradient(180deg,#339933,#008000);
+.carousel-control-next-icon {
+    background-image: url(data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23008000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E);
+}
+
+.carousel-control-prev-icon {
+    background-image: url(data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23008000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E);
 }
 
 #jat-carousel-controls .carousel-control-prev {
