--- a/css/theme.css
+++ b/css/theme.css
@@ -204,11 +204,13 @@ body.single-players .carousel img {
     text-align: center;
 }
 
+#jat-carousel .carousel-control-next-icon,
 #jat-carousel-controls .carousel-control-next-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23008000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
 
-#jat-carousel-controls .carousel-control-prev-icon {
+#jat-carousel .carousel-control-prev-icon,
+#jat-carousel-controls .carousel-control-next-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23008000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
 }
 
