--- a/css/theme.css
+++ b/css/theme.css
@@ -51,7 +51,7 @@ button.navbar-toggler:focus {
 }
 
 .footer {
-    background-image: linear-gradient(180deg,#339933,#005000);
+    background-image: url(../img/jat-background.jpeg);
 }
 
 .site-info {
