--- a/css/theme.css
+++ b/css/theme.css
@@ -51,7 +51,7 @@ button.navbar-toggler:focus {
 }
 
 .footer {
-    background-image: url(../img/jat-background.jpeg);
+    background-image: linear-gradient(180deg,#339933,#005000);
 }
 
 .site-info {
@@ -69,6 +69,7 @@ button.navbar-toggler:focus {
 .jat-header {
     font-weight: 700;
     text-align: center;
+    color: #fff !important;
 }
 
 .jat-page {
@@ -169,8 +170,17 @@ button.navbar-toggler:focus {
 }
 
 .h-row {
-    border: 1px solid #005000;
+    border: 1px solid #fff;
     width: 50%;
+}
+
+.score {
+    color: #005000 !important;
+}
+
+.btn-success {
+    background-color: #005000 !important;
+    border-color: #005000 !important;
 }
 
 body.single-players {
@@ -586,6 +596,7 @@ body.single-players .carousel img {
     background: #f7d902;
     padding-top: 2rem;
     padding-bottom: 2rem;
+    background-image: url(../img/jat-background.jpeg);
 }
 
 .list-group.panel > .list-group-item {
@@ -671,7 +682,7 @@ p:empty {
 
 #secondary-navbar {
     display: block;
-    background: #000;
+    background: #008000;
 }
 
 #secondary-menu {
@@ -687,7 +698,7 @@ p:empty {
 
 #secondary-menu li a {
     color: #fff;
-    font-weight: bold;
+    /*font-weight: bold;*/
 }
 
 #secondary-menu li a:hover {
@@ -737,6 +748,7 @@ p:empty {
     display: block;
     text-align: center;
     margin-top: 1rem;
+    color: #005000;
 }
 
 .woocommerce ul.cart_list, .woocommerce ul.product_list_widget .woocommerce-Price-amount.amount {
