--- a/css/theme.css
+++ b/css/theme.css
@@ -718,12 +718,6 @@ p:empty {
     clear: both;
 }
 
-.woocommerce ul.cart_list li img, .woocommerce ul.product_list_widget li img {
-    margin-left: 0;
-    width: auto;
-    float: none;
-}
-
 .woocommerce .flex-viewport {
     background: #fff;
 }
@@ -738,12 +732,18 @@ p:empty {
     object-fit: contain;
 }
 
-.woocommerce ul.cart_list, .woocommerce ul.product_list_widget {
+.jat-sidebar ul.cart_list, .jat-sidebar ul.product_list_widget {
     display: flex;
     justify-content: space-evenly;
 }
 
-.woocommerce ul.cart_list, .woocommerce ul.product_list_widget .product-title {
+.jat-sidebar ul.cart_list li img, .jat-sidebar ul.product_list_widget li img {
+    margin-left: 0;
+    width: auto;
+    float: none;
+}
+
+.jat-sidebar ul.cart_list, .jat-sidebar ul.product_list_widget .product-title {
     font-size: 20px;
     display: block;
     text-align: center;
@@ -751,7 +751,7 @@ p:empty {
     color: #005000;
 }
 
-.woocommerce ul.cart_list, .woocommerce ul.product_list_widget .woocommerce-Price-amount.amount {
+.jat-sidebar ul.cart_list, .jat-sidebar ul.product_list_widget .woocommerce-Price-amount.amount {
     font-size: 20px;
     display: none;
 }
