--- a/css/theme.css
+++ b/css/theme.css
@@ -596,6 +596,7 @@ body.single-players .carousel img {
     background: #f7d902;
     padding-top: 2rem;
     padding-bottom: 2rem;
+    background-size: cover;
     background-image: url(../img/jat-background.jpeg);
 }
 
