--- a/css/theme.css
+++ b/css/theme.css
@@ -1090,4 +1090,8 @@ p:empty {
         margin-bottom: 2rem;
         border: 1px solid #008000;
     }
+
+    .jat-sidebar ul.cart_list li img, .jat-sidebar ul.product_list_widget li img {
+        max-width: 250px;
+    }
 }
